PROJECT(ROSJointUpdater)

find_package(catkin REQUIRED COMPONENTS roscpp std_msgs )
find_package (Boost COMPONENTS program_options filesystem REQUIRED)

find_package(catkin REQUIRED COMPONENTS
roscpp
)


catkin_package(

 CATKIN_DEPENDS roscpp 
)

SET(ROSJointUpdater_SRCS
    ROSJointUpdaterExtention.cc
)

SET(ROSJointUpdater_MOC_HDRS
    ROSJointUpdaterExtention.h
	include/toolkit_interfaces.h
)

SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${BOOST_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${catkin_INCLUDE_DIRS})
# INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/plugins/MotionMarkerPlugin)
# INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/plugins/AnimationPlugin)

ADD_DEFINITIONS (${QT_DEFINITIONS})
ADD_DEFINITIONS (-DQT_PLUGIN)
ADD_DEFINITIONS (-DQT_SHARED)
#ADD_DEFINITIONS(-DQT_NO_DEBUG)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

ADD_LIBRARY (ROSplugin SHARED ${ROSJointUpdater_SRCS})

TARGET_LINK_LIBRARIES (ROSplugin
	${RBDL_LIBRARY}
	toolkitlib
    ${catkin_LIBRARIES}
	
)

TARGET_COMPILE_DEFINITIONS (ROSplugin PRIVATE TOOLKIT_COMPILE_ROSJointUpdaterPLUGIN)

IF(NOT MSVC)
INSTALL( TARGETS ROSplugin
         RUNTIME DESTINATION ${PLUGIN_INSTALL_DIR}
         LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
ENDIF()
