cmake_minimum_required(VERSION 3.0.2)
project(ROSJointUpdater)

include_directories(/opt/ros/melodic/include /opt/ros/melodic/lib)

find_package (Boost COMPONENTS program_options filesystem REQUIRED)

find_package(catkin REQUIRED COMPONENTS 

)

catkin_package(
  CATKIN_DEPENDS roscpp std_msgs
)

SET(ROSJointUpdater_SRCS
    #ROSJointUpdaterExtention.cc
    TestPlugin.cc
)

SET(ROSJointUpdater_MOC_HDRS
  #  ROSJointUpdaterExtention.h
    TestPlugin.h
	include/toolkit_interfaces.h
)

SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${RBDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${BOOST_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${catkin_INCLUDE_DIRS})
# INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/plugins/MotionMarkerPlugin)
# INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/plugins/AnimationPlugin)

ADD_DEFINITIONS (${QT_DEFINITIONS})
ADD_DEFINITIONS (-DQT_PLUGIN)
ADD_DEFINITIONS (-DQT_SHARED)
#ADD_DEFINITIONS(-DQT_NO_DEBUG)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

ADD_LIBRARY (TestPlugin SHARED ${ROSJointUpdater_SRCS})

TARGET_LINK_LIBRARIES (TestPlugin
	${RBDL_LIBRARY}
	toolkitlib
    ${catkin_LIBRARIES}
	
)

TARGET_COMPILE_DEFINITIONS (TestPlugin PRIVATE TOOLKIT_COMPILE_PLUGIN)

IF(NOT MSVC)
INSTALL( TARGETS TestPlugin
         RUNTIME DESTINATION ${PLUGIN_INSTALL_DIR}
         LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
ENDIF()